--- a/content/docs/installation/vite.mdx
+++ b/content/docs/installation/vite.mdx
@@ -1,95 +1,16 @@
 ---
-title: Vite
-description: Install and configure Vite.
+title: Remix
+description: Install and configure Remix.
 ---
 
 <Steps>
 
 ### Create project
 
-Start by creating a new React project using `vite`:
+Start by creating a new Remix project using `create-remix`:
 
 ```bash
-npm create vite@latest
-```
-
-### Add Tailwind and its configuration
-
-Install `tailwindcss` and its peer dependencies, then generate your `tailwind.config.js` and `postcss.config.js` files:
-
-```bash
-npm install -D tailwindcss postcss autoprefixer
-
-npx tailwindcss init -p
-```
-
-### Edit tsconfig.json file
-
-The current version of Vite splits TypeScript configuration into three files, two of which need to be edited.
-Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the `tsconfig.json` and
-`tsconfig.app.json` files:
-
-```ts {11-16} showLineNumbers
-{
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
-}
-```
-
-### Edit tsconfig.app.json file
-
-Add the following code to the `tsconfig.app.json` file to resolve paths, for your IDE:
-
-```ts {4-9} showLineNumbers
-{
-  "compilerOptions": {
-    // ...
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
-    // ...
-  }
-}
-```
-
-### Update vite.config.ts
-
-Add the following code to the vite.config.ts so your app can resolve paths without error
-
-```bash
-# (so you can import "path" without error)
-npm i -D @types/node
-```
-
-```typescript
-import path from "path";
-import react from "@vitejs/plugin-react";
-import { defineConfig } from "vite";
-
-export default defineConfig({
-  plugins: [react()],
-  resolve: {
-    alias: {
-      "@": path.resolve(__dirname, "./src"),
-    },
-  },
-});
+npx create-remix@latest my-app
 ```
 
 ### Run the CLI
@@ -110,6 +31,61 @@ Which color would you like to use as base color? › Zinc
 Do you want to use CSS variables for colors? › no / yes
 ```
 
+### App structure
+
+<Callout>
+
+**Note**: This app structure is only a suggestion. You can place the files wherever you want.
+
+</Callout>
+
+- Place the UI components in the `app/components/ui` folder.
+- Your own components can be placed in the `app/components` folder.
+- The `app/lib` folder contains all the utility functions. We have a `utils.ts` where we define the `cn` helper.
+- The `app/tailwind.css` file contains the global CSS.
+
+### Install Tailwind CSS
+
+```bash
+npm add -D tailwindcss@latest autoprefixer@latest
+```
+
+Then we create a `postcss.config.js` file:
+
+```js
+export default {
+  plugins: {
+    tailwindcss: {},
+    autoprefixer: {},
+  },
+};
+```
+
+And finally we add the following to our `remix.config.js` file:
+
+```js {4-5}
+/** @type {import('@remix-run/dev').AppConfig} */
+export default {
+  ...
+  tailwind: true,
+  postcss: true,
+  ...
+};
+```
+
+### Add `tailwind.css` to your app
+
+In your `app/root.tsx` file, import the `tailwind.css` file:
+
+```js {1, 4}
+import styles from "./tailwind.css?url"
+
+export const links: LinksFunction = () => [
+  { rel: "stylesheet", href: styles },
+  ...(cssBundleHref ? [{ rel: "stylesheet", href: cssBundleHref }] : []),
+]
+```
+
 ### That's it
 
 You can now start adding components to your project.
@@ -121,7 +97,7 @@ npx shadcn@latest add button
 The command above will add the `Button` component to your project. You can then import it like this:
 
 ```tsx {1,6} showLineNumbers
-import { Button } from "@/components/ui/button";
+import { Button } from "~/components/ui/button";
 
 export default function Home() {
   return (
