--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,73 +1,84 @@
 ---
 title: "shaduxe/ui"
-description: "Beautifully designed, expertly crafted component variants. The perfect extension for your shadcn/ui components."
+description: "Beautifully crafted component variants. The perfect extension to your shadcn/ui components."
 ---
 
-# **Introducing shaduxe/ui**
+## What is shaduxe/ui?
 
-**Beautifully designed, expertly crafted component variants. The perfect extension for your shadcn/ui components.**
+shaduxe/ui is a carefully curated collection of powerful variations built on top of shadcn/ui, designed to take your UI to the next level.
 
----
+### Key Features
 
-This is **NOT** a component library. It's a collection of re-usable components that you can copy and paste into your apps.
+- **Built on shadcn/ui**: Leverages the power and flexibility of shadcn/ui components.
+- **Easy Installation**: All components are easily installable via the familiar shadcn CLI, but from our custom registry.
+- **Powerful Variations**: Extend your design possibilities with expertly crafted component variants.
 
-**What do you mean by not a component library?**
+## Getting Started
 
-I mean you do not install it as a dependency. It is not available or distributed via npm.
+The best part? If you're familiar with shadcn/ui, you already know how to use shaduxe/ui! We use the exact same installation process as shadcn/ui, just with our custom registry.
 
-Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
+## Why shaduxe/ui?
 
-_Use this as a reference to build your own component libraries._
+1. **Seamless Integration**: Works perfectly with your existing shadcn/ui setup.
+2. **Time-Saving**: Pre-built variations mean less time styling, more time building.
+3. **Flexible**: Like shadcn/ui, the code is yours to customize and adapt.
+4. **Expanded Design Options**: More variants out of the box for each component.
+
+## How It Works
+
+1. **Choose**: Select the shaduxe/ui component you want to use.
+2. **Install**: Use the shadcn CLI to add the component to your project from our registry.
+3. **Import**: Bring the component and its variations into your project.
+4. **Customize**: Tailor the components to your specific needs, just like with shadcn/ui.
 
 ## FAQ
 
 <Accordion type="multiple">
 
 <AccordionItem value="faq-1">
-	<AccordionTrigger>
-		Why copy/paste and not packaged as a dependency?
-	</AccordionTrigger>
-	<AccordionContent>
-The idea behind this is to give you ownership and control over the code, allowing you to decide how the components are built and styled.
-
-Start with some sensible defaults, then customize the components to your needs.
-
-One of the drawbacks of packaging the components in an npm package is that the style is coupled with the implementation. _The design of your components should be separate from their implementation._
-
-</AccordionContent>
+  <AccordionTrigger>
+    How is shaduxe/ui different from shadcn/ui?
+  </AccordionTrigger>
+  <AccordionContent>
+    While shadcn/ui provides the foundational components, shaduxe/ui offers pre-built variations of these components. This means more design options out of the box, saving you time and effort in customization.
+  </AccordionContent>
 </AccordionItem>
 
 <AccordionItem value="faq-2">
   <AccordionTrigger>
-    Do you plan to publish it as an npm package?
+    Do I need to install shadcn/ui separately?
   </AccordionTrigger>
   <AccordionContent>
-    No. I have no plans to publish it as an npm package.
+    No, shaduxe/ui components come with all necessary shadcn/ui code included. You can use them directly or alongside existing shadcn/ui components.
   </AccordionContent>
 </AccordionItem>
 
 <AccordionItem value="faq-3">
-<AccordionTrigger>
-Which frameworks are supported?
-</AccordionTrigger>
-<AccordionContent>
-
-You can use any framework that supports React. [Next.js](https://ui.shadcn.com/docs/installation/next), [Astro](https://ui.shadcn.com/docs/installation/astro), [Remix](https://ui.shadcn.com/docs/installation/remix), [Gatsby](https://ui.shadcn.com/docs/installation/gatsby) etc.
-
-</AccordionContent>
+  <AccordionTrigger>
+    Can I use shaduxe/ui with any framework?
+  </AccordionTrigger>
+  <AccordionContent>
+    Yes, shaduxe/ui supports all frameworks compatible with shadcn/ui, including Next.js, Astro, Remix, Gatsby, and more.
+  </AccordionContent>
 </AccordionItem>
 
 <AccordionItem value="faq-4">
-	<AccordionTrigger>
-	Can I use this in my project?
-	</AccordionTrigger>
-	<AccordionContent>
-Yes. Free to use for personal and commercial projects. No attribution required.
-
-But hey, let me know if you do. I'd love to see what you build.
-
-    </AccordionContent>
-
+  <AccordionTrigger>
+    Is shaduxe/ui free to use?
+  </AccordionTrigger>
+  <AccordionContent>
+    Yes, shaduxe/ui is free for both personal and commercial projects. We'd love to see what you create with it!
+  </AccordionContent>
 </AccordionItem>
 
 </Accordion>
+
+## Join the Community
+
+We're excited to see what you'll create with shaduxe/ui! Join our community to share your projects, get help, and connect with other developers:
+
+- Star us on [GitHub](https://github.com/BankkRoll/shaduxe-ui) 
+- Join our Discord server - [Coming Soon!]
+
+Ready to elevate your UI? Start using shaduxe/ui today and unlock a new world of design possibilities!
+
