--- a/content/docs/cli.mdx
+++ b/content/docs/cli.mdx
@@ -5,7 +5,7 @@ description: Use the CLI to add components to your project.
 
 <Callout>
 
-**Note:** We just released a new `shadcn` CLI. See the [changelog](/docs/changelog) for more information.
+**Note:** We have the exact same installation process as [shadcn/ui](https://ui.shadcn.com/docs/installation/).
 
 </Callout>
 
