--- a/content/docs/components-json.mdx
+++ b/content/docs/components-json.mdx
@@ -3,6 +3,12 @@ title: components.json
 description: Configuration for your project.
 ---
 
+<Callout>
+
+**Note:** We have the exact same installation process as [shadcn/ui](https://ui.shadcn.com/docs/installation/).
+
+</Callout>
+
 The `components.json` file holds configuration for your project.
 
 We use it to understand how your project is set up and how to generate components customized for your project.
