--- a/content/docs/theming.mdx
+++ b/content/docs/theming.mdx
@@ -3,6 +3,12 @@ title: Theming
 description: Using CSS Variables or Tailwind CSS for theming.
 ---
 
+<Callout>
+
+**Note:** We have the exact same installation process as [shadcn/ui](https://ui.shadcn.com/docs/installation/).
+
+</Callout>
+
 You can choose between using CSS variables or Tailwind CSS utility classes for theming.
 
 ## Utility classes
