--- a/content/pages/terms.mdx
+++ b/content/pages/terms.mdx
@@ -1,4 +1,4 @@
 ---
 title: Terms & Conditions
-description: The Terms & Conditions for Slice UI
+description: The Terms & Conditions for shaduxe/ui
 ---
