--- a/content/docs/changelog.mdx
+++ b/content/docs/changelog.mdx
@@ -1,5 +1,5 @@
 ---
 title: Changelog
-description: A history of changes for Slice UI
+description: A history of changes for shaduxe/ui
 published: false
 ---
