--- a/content/docs/dark-mode/index.mdx
+++ b/content/docs/dark-mode/index.mdx
@@ -3,7 +3,13 @@ title: Dark Mode
 description: Adding dark mode to your site.
 ---
 
-<div className="grid sm:grid-cols-2 gap-4 sm:gap-6">
+<Callout>
+
+**Note:** We have the exact same installation process as [shadcn/ui](https://ui.shadcn.com/docs/installation/).
+
+</Callout>
+
+<div className="mt-6 grid sm:grid-cols-2 gap-4 sm:gap-6">
   <LinkedCard href="/docs/dark-mode/next">
     <svg
       role="img"
