--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -1,7 +1,7 @@
 ---
 title: Avatar
-description: Displays a user's profile picture or initials.
-author: v0
+description: Displays a user's profile picture or initials with multiple variants and sizes.
+author: bankk
 published: true
 ---
 
@@ -32,9 +32,7 @@ npx shadcn@latest add "https://ui.shaduxe.com/r/avatar"
 
 <ComponentSource name="avatar" />
 
-<Step>
-    Make sure the import path is correct and matches your project setup:
-</Step>
+<Step>Make sure the import path is correct and matches your project setup:</Step>
 
 ```tsx {1,5-8} showLineNumbers
 import { Avatar, AvatarImage, AvatarFallback } from "@/components/ui/avatar";
@@ -55,24 +53,50 @@ export default function Home() {
 
 </Tabs>
 
-## Avatar Variants
+## Examples
 
-### Circle Avatar (Default)
+#### Circle Avatar (Default)
 
 <ComponentPreview name="avatar-circle-example" />
 
-### Rounded Avatar
+#### Rounded Avatar
 
 <ComponentPreview name="avatar-rounded-example" />
 
-### Square Avatar
+#### Square Avatar
 
 <ComponentPreview name="avatar-square-example" />
 
-## Avatar with Fallback
+#### Avatar with Fallback
+
+When an image fails to load or is not provided, the `AvatarFallback` component is displayed.
 
 <ComponentPreview name="avatar-fallback-example" />
 
-## Avatar in a Group
+#### Avatar Group
+
+Combine multiple avatars to create a group display.
 
 <ComponentPreview name="avatar-group-example" />
+
+## Props
+
+| Prop     | Type                | Description                                | Default   |
+|----------|---------------------|--------------------------------------------|-----------| 
+| variant  | `circle` \| `square` \| `rounded` | Shape of the avatar | `circle`  |
+| size     | `xs` \| `sm` \| `md` \| `lg` \| `xl` \| `2xl` | Size of the avatar | `md` |
+| className| `string`            | Additional CSS classes                     | -         |
+
+### Supported HTML Attributes
+
+Because the Button uses Radix UI, it inherits and supports **all standard HTML image attributes**, including:
+
+- `src`
+- `alt`
+- `width`
+- `height`
+- `aria-*` attributes
+- `data-*` attributes
+- Event handlers like `onError`, `onLoad`, etc.
+
+The Avatar component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
