--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -32,23 +32,7 @@ npx shadcn@latest add "https://ui.shaduxe.com/r/button"
 
 <ComponentSource name="button" />
 
-<Step>
-  Make sure the import path is correct and matches your project setup:
-</Step>
-
-```tsx {1,6} showLineNumbers
-import { Button } from "@/components/ui/button";
-
-export default function Home() {
-  return (
-    <div className="flex items-center justify-center h-screen">
-      <Button>Click me</Button>
-    </div>
-  );
-}
-```
-
-<Step>Update `tailwind.config.js`</Step>
+<Step>Update `tailwind.config.js`:</Step>
 
 Add the following animations to your `tailwind.config.js` file:
 
@@ -78,67 +62,88 @@ module.exports = {
 }
 ```
 
+<Step>Make sure the import path is correct and matches your project setup:</Step>
+
+```tsx {1,6} showLineNumbers
+import { Button } from "@/components/ui/button";
+
+export default function Home() {
+  return (
+    <div className="flex items-center justify-center h-screen">
+      <Button>Click me</Button>
+    </div>
+  );
+}
+```
+
 </Steps>
 
 </TabsContent>
 
 </Tabs>
 
-## Button Variants
+## Examples
 
-### Default Button
+#### Default Button
 
 <ComponentPreview name="button-default-example" />
 
-### Secondary Button
+#### Secondary Button
 
 <ComponentPreview name="button-secondary-example" />
 
-### Outline Button
+#### Outline Button
 
 <ComponentPreview name="button-outline-example" />
 
-### Destructive Button
+#### Destructive Button
 
 <ComponentPreview name="button-destructive-example" />
 
-### Ghost Button
+#### Ghost Button
 
 <ComponentPreview name="button-ghost-example" />
 
-### Link Button
+#### Link Button
 
 <ComponentPreview name="button-link-example" />
 
-### Link Hover 1 Button
-
-<ComponentPreview name="button-link-hover-1-example" />
-
-### Link Hover 2 Button
-
-<ComponentPreview name="button-link-hover-2-example" />
-
-### Expand Icon Button
+#### Expand Icon Button
 
 <ComponentPreview name="button-expand-icon-example" />
 
-### Ring Hover Button
-
-<ComponentPreview name="button-ring-hover-example" />
-
-### Ring Hover Outline Button
-
-<ComponentPreview name="button-ring-hover-outline-example" />
-
-### Shine Button
+#### Shine Button
 
 <ComponentPreview name="button-shine-example" />
 
-### Gooey Right Button
+#### Gooey Right Button
 
 <ComponentPreview name="button-gooey-right-example" />
 
-### Gooey Left Button
+## Props
 
-<ComponentPreview name="button-gooey-left-example" />
+| Prop         | Type                                                     | Description                                       | Default    |
+|--------------|----------------------------------------------------------|---------------------------------------------------|------------|
+| variant      | `default` \| `destructive` \| `outline` \| `secondary` \| `ghost` \| `link` \| `expandIcon` \| `ringHover` \| `ringHoverOutline` \| `shine` \| `gooeyRight` \| `gooeyLeft` \| `linkHover1` \| `linkHover2` | Button style variant                  | `default`  |
+| size         | `icon` \| `xs` \| `sm` \| `md` \| `lg` \| `xl` \| `2xl`   | Size of the button                                | `md`       |
+| asChild      | `boolean`                                                | Render as a child component                       | `false`    |
+| Icon         | `React.ElementType`                                      | Icon component to display                         | -          |
+| iconPlacement| `left` \| `right`                                        | Position of the icon relative to the text         | -          |
+| className    | `string`                                                 | Additional CSS classes                            | -          |
 
+### Supported HTML Attributes
+
+Because the Button uses Radix UI, it inherits and supports **all standard HTML button attributes**, including:
+
+- `onClick`
+- `disabled`
+- `type` (`"button"`, `"submit"`, `"reset"`)
+- `form`
+- `formAction`
+- `name`
+- `value`
+- `aria-*` attributes
+- `data-*` attributes
+- Event handlers like `onMouseEnter`, `onFocus`, etc.
+
+The Button component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
