--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -46,10 +46,10 @@ The best part? If you're familiar with shadcn/ui, you already know how to use sh
 
 <AccordionItem value="faq-2">
   <AccordionTrigger>
-    Do I need to install shadcn/ui separately?
+    Do I need to install shaduxe/ui separately?
   </AccordionTrigger>
   <AccordionContent>
-    No, shaduxe/ui components come with all necessary shadcn/ui code included. You can use them directly or alongside existing shadcn/ui components.
+    No, shaduxe/ui components are direct expansions of existing shadcn/ui components.
   </AccordionContent>
 </AccordionItem>
 
