--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -55,25 +55,25 @@ export default function Home() {
 
 ## Examples
 
-#### Circle Avatar (Default)
+### Circle Avatar (Default)
 
 <ComponentPreview name="avatar-circle-example" />
 
-#### Rounded Avatar
+### Rounded Avatar
 
 <ComponentPreview name="avatar-rounded-example" />
 
-#### Square Avatar
+### Square Avatar
 
 <ComponentPreview name="avatar-square-example" />
 
-#### Avatar with Fallback
+### Avatar with Fallback
 
 When an image fails to load or is not provided, the `AvatarFallback` component is displayed.
 
 <ComponentPreview name="avatar-fallback-example" />
 
-#### Avatar Group
+### Avatar Group
 
 Combine multiple avatars to create a group display.
 
