--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -84,39 +84,39 @@ export default function Home() {
 
 ## Examples
 
-#### Default Button
+### Default Button
 
 <ComponentPreview name="button-default-example" />
 
-#### Secondary Button
+### Secondary Button
 
 <ComponentPreview name="button-secondary-example" />
 
-#### Outline Button
+### Outline Button
 
 <ComponentPreview name="button-outline-example" />
 
-#### Destructive Button
+### Destructive Button
 
 <ComponentPreview name="button-destructive-example" />
 
-#### Ghost Button
+### Ghost Button
 
 <ComponentPreview name="button-ghost-example" />
 
-#### Link Button
+### Link Button
 
 <ComponentPreview name="button-link-example" />
 
-#### Expand Icon Button
+### Expand Icon Button
 
 <ComponentPreview name="button-expand-icon-example" />
 
-#### Shine Button
+### Shine Button
 
 <ComponentPreview name="button-shine-example" />
 
-#### Gooey Right Button
+### Gooey Right Button
 
 <ComponentPreview name="button-gooey-right-example" />
 
