--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -99,4 +99,4 @@ Because the Button uses Radix UI, it inherits and supports **all standard HTML i
 - `data-*` attributes
 - Event handlers like `onError`, `onLoad`, etc.
 
-The Avatar component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
+The Avatar component uses Radix UI's primitives, ensuring proper accessibility, keyboard navigation and semantic HTML.
