--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -146,4 +146,4 @@ Because the Button uses Radix UI, it inherits and supports **all standard HTML b
 - `data-*` attributes
 - Event handlers like `onMouseEnter`, `onFocus`, etc.
 
-The Button component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
+The Button component uses Radix UI's primitives, ensuring proper accessibility, keyboard navigation and semantic HTML.
