--- a/content/docs/components/input.mdx
+++ b/content/docs/components/input.mdx
@@ -106,4 +106,4 @@ Because the Button uses Radix UI, it inherits and supports **all standard HTML i
 - `aria-*` attributes
 - `data-*` attributes
 
-The Input component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
+The Input component uses Radix UI's primitives, ensuring proper accessibility, keyboard navigation and semantic HTML.
