--- a/content/docs/components/switch.mdx
+++ b/content/docs/components/switch.mdx
@@ -109,4 +109,4 @@ Because the Switch uses Radix UI's `Switch` component, it inherits and supports 
 - `data-*` attributes
 - Event handlers like `onFocus`, `onBlur`, etc.
 
-The Switch component uses Radix UI's primitives, ensuring proper accessibility and semantic HTML.
+The Switch component uses Radix UI's primitives, ensuring proper accessibility, keyboard navigation and semantic HTML.
