--- a/content/docs/components/tabs.mdx
+++ b/content/docs/components/tabs.mdx
@@ -102,4 +102,4 @@ Because the Tabs use Radix UI's `Tabs` component, they inherit and support **all
 - `data-*` attributes
 - Event handlers like `onKeyDown`, `onFocus`, etc.
 
-The Tabs component uses Radix UI's primitives, ensuring proper accessibility and keyboard navigation.
+The Tabs component uses Radix UI's primitives, ensuring proper accessibility, keyboard navigation and semantic HTML.
