--- a/content/docs/components/input.mdx
+++ b/content/docs/components/input.mdx
@@ -80,6 +80,10 @@ export default function Home() {
 
 <ComponentPreview name="input-pill-icon-example" />
 
+### Input Pill Password with Icon
+
+<ComponentPreview name="input-pill-icon-password-example" />
+
 ## Props
 
 | Prop          | Type                                    | Description                                | Default   |
