--- a/content/docs/components/input.mdx
+++ b/content/docs/components/input.mdx
@@ -17,7 +17,7 @@ published: true
 <TabsContent value="cli">
 
 ```bash
-npx shadcn@latest add input
+npx shadcn@latest add "https://ui.shaduxe.com/r/input"
 ```
 
 </TabsContent>
