--- a/content/docs/components/switch.mdx
+++ b/content/docs/components/switch.mdx
@@ -17,7 +17,7 @@ published: true
 <TabsContent value="cli">
 
 ```bash
-npx shadcn@latest add switch
+npx shadcn@latest add "https://ui.shaduxe.com/r/switch"
 ```
 
 </TabsContent>
