--- a/content/docs/components/tabs.mdx
+++ b/content/docs/components/tabs.mdx
@@ -17,7 +17,7 @@ published: true
 <TabsContent value="cli">
 
 ```bash
-npx shadcn@latest add tabs
+npx shadcn@latest add "https://ui.shaduxe.com/r/tabs"
 ```
 
 </TabsContent>
