--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -86,6 +86,16 @@ export default function Home() {
 
 </Tabs>
 
+## Usage
+
+```tsx
+import { Button } from "@/components/ui/button"
+```
+
+```tsx
+<Button>Button</Button>
+```
+
 ## Examples
 
 ### Default Button
