--- a/content/docs/components/input.mdx
+++ b/content/docs/components/input.mdx
@@ -58,6 +58,16 @@ export default function Home() {
 
 </Tabs>
 
+## Usage
+
+```tsx
+import { Input } from "@/components/ui/input"
+```
+
+```tsx
+<Input />
+```
+
 ## Examples
 
 ### Default Input
