--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -59,9 +59,22 @@ export default function Home() {
 
 </Tabs>
 
+## Usage
+
+```tsx
+import { Avatar, AvatarFallback, AvatarImage } from "@/components/ui/avatar"
+```
+
+```tsx
+<Avatar>
+  <AvatarImage src="https://github.com/shadcn.png" />
+  <AvatarFallback>CN</AvatarFallback>
+</Avatar>
+```
+
 ## Examples
 
-### Circle Avatar (Default)
+### Default Avatar
 
 <ComponentPreview name="avatar-circle-example" />
 
