--- a/content/docs/components/switch.mdx
+++ b/content/docs/components/switch.mdx
@@ -59,6 +59,16 @@ export default function Home() {
 
 </Tabs>
 
+## Usage
+
+```tsx
+import { Switch } from "@/components/ui/switch"
+```
+
+```tsx
+<Switch />
+```
+
 ## Examples
 
 ### Default Switch
