--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,35 +1,21 @@
 ---
-title: "shaduxe/ui"
-description: "Beautifully crafted component variants. The perfect extension to your shadcn/ui components."
+title: "Introduction"
+description: "Beautifully crafted component variants. The perfect extension to your shadcn/ui components. Accessible. Customizable. Open Source."
 ---
 
 ## What is shaduxe/ui?
 
-shaduxe/ui is a carefully curated collection of powerful variations built on top of shadcn/ui, designed to take your UI to the next level.
+Collection of variations built on top of shadcn/ui, designed to take your UI to the next level.
 
-### Key Features
+This is **NOT** a component library. It's a collection of re-usable components that you can copy and paste into your apps.
 
-- **Built on shadcn/ui**: Leverages the power and flexibility of shadcn/ui components.
-- **Easy Installation**: All components are easily installable via the familiar shadcn CLI, but from our custom registry.
-- **Powerful Variations**: Extend your design possibilities with expertly crafted component variants.
+**What do you mean by not a component library?**
 
-## Getting Started
+I mean you do not install it as a dependency. It is not available or distributed via npm.
 
-The best part? If you're familiar with shadcn/ui, you already know how to use shaduxe/ui! We use the exact same installation process as shadcn/ui, just with our custom registry.
+Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
 
-## Why shaduxe/ui?
-
-1. **Seamless Integration**: Works perfectly with your existing shadcn/ui setup.
-2. **Time-Saving**: Pre-built variations mean less time styling, more time building.
-3. **Flexible**: Like shadcn/ui, the code is yours to customize and adapt.
-4. **Expanded Design Options**: More variants out of the box for each component.
-
-## How It Works
-
-1. **Choose**: Select the shaduxe/ui component you want to use.
-2. **Install**: Use the shadcn CLI to add the component to your project from our registry.
-3. **Import**: Bring the component and its variations into your project.
-4. **Customize**: Tailor the components to your specific needs, just like with shadcn/ui.
+***Use this as a reference to build your own component libraries.***
 
 ## FAQ
 
