--- a/content/docs/templates/emaily.mdx
+++ b/content/docs/templates/emaily.mdx
@@ -8,7 +8,7 @@ published: true
 <div className="relative w-full overflow-hidden rounded-lg border bg-gradient-to-b from-background/10 to-background/80 p-2 backdrop-blur">
   <div className="w-full overflow-hidden rounded-lg border shadow-lg">
     <video 
-      src="/templates/emaily.webm" 
+      src="/templates/emaily.mp4"  
       autoPlay
       muted
       loop
@@ -23,7 +23,7 @@ published: true
     <IconDownload className="size-5 mr-1" />
     <span className="font-medium">Coming Soon</span>
   </Button>
-  <a href="#" target="_blank">
+  <a href="https://shaduxe-emaily.vercel.app" target="_blank">
     <Button className="flex gap-2 items-center py-6 px-8 h-12">
       <IconExternalLink className="size-5 mr-1" />
       <span className="font-medium">Live Preview</span>
@@ -106,11 +106,11 @@ Emaily is a complete SaaS starter template built with Next.js, Tailwind CSS, and
   <TechStackFull
     technologies={[
       "nextjs",
-      "supabase",
       "typescript",
+      "shadcn",
       "tailwindcss",
       "motion",
-      "shadcn",
+      "supabase",
     ]}
   />
 </div>
