--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -25,6 +25,30 @@ links:
       </TabsContent>
       <TabsContent value="manual">
         <ComponentSource name="button" />
+        
+        Add the following to your global styles:
+        
+        ```css {2} {5,6,7,8,9,10,11,12,13,14,15} {17,18,19} showLineNumbers
+        :root {
+          --duration-shine: 2s;
+        }
+
+        @keyframes shine {
+          0% {
+            background-position: 200% 0;
+          }
+          25% {
+            background-position: -200% 0;
+          }
+          100% {
+            background-position: -200% 0;
+          }
+        }
+
+        @utility animate-shine {
+          animation: shine var(--duration-shine) infinite linear;
+        }
+        ```
       </TabsContent>
     </Tabs>
   </Step>
