--- a/content/docs/components/switch.mdx
+++ b/content/docs/components/switch.mdx
@@ -8,6 +8,8 @@ links:
   api: https://www.radix-ui.com/primitives/docs/utilities/switch
 ---
 
+<ComponentPreview name="switch-demo" />
+
 ## Installation
 
 <Steps>
@@ -39,20 +41,15 @@ links:
 
 ## Usage
 
-```tsx {1,5-6} showLineNumbers
+```tsx {1,5} showLineNumbers
 import { Switch } from "@/components/ui/switch";
 
 export default function Home() {
   return (
     <Switch id="airplane-mode" />
-    <label htmlFor="airplane-mode">Airplane Mode</label>
   );
 }
 ```
-
-## Examples
-
-<ComponentPreview name="switch-demo" />
 
 ## Props
 
