--- a/content/docs/templates/fluxio.mdx
+++ b/content/docs/templates/fluxio.mdx
@@ -10,12 +10,9 @@ links:
 
 <div className="relative w-full overflow-hidden rounded-lg border bg-gradient-to-b from-background/10 to-background/80 p-2 backdrop-blur">
   <div className="w-full overflow-hidden rounded-lg border shadow-lg">
-    <video 
-      src="/templates/fluxio.mp4"  
-      autoPlay
-      muted
-      loop
-      playsInline
+    <img 
+      src="/templates/fluxio.mp4"
+      alt="fluxio-preview"
       className="w-full h-auto"
     />
   </div>
