--- a/content/docs/templates/emaily.mdx
+++ b/content/docs/templates/emaily.mdx
@@ -11,7 +11,7 @@ links:
 <div className="relative w-full overflow-hidden rounded-lg border bg-gradient-to-b from-background/10 to-background/80 p-2 backdrop-blur">
   <div className="w-full overflow-hidden rounded-lg border shadow-lg">
     <img 
-      src="/templates/emaily.mp4"
+      src="/templates/emaily.png"
       alt="emaily-preview"
       className="w-full h-auto"
     />
